--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Find recipe based on ingredients on hand",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=production nodemon server/server.js",
+    "build": "NODE_ENV=production webpack",
+    "dev": "concurrently \"NODE_ENV=development webpack serve --open\" \"nodemon server/server.js\"",
+    "lint": "eslint './**/*.{ts,tsx,js,jsx}'",
+    "lint-and-fix": "eslint './**/*.{ts,tsx,js,jsx}' --fix",
+    "format": "prettier --config .prettierrc './**/*.{ts,tsx,js,jsx}' --write"
   },
   "repository": {
     "type": "git",
@@ -19,6 +24,47 @@
   "homepage": "https://github.com/Recipe-Find/-Recipe-Rescue#readme",
   "devDependencies": {
     "eslint": "^8.34.0",
-    "prettier": "^2.8.4"
+    "prettier": "^2.8.4",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.2",
+    "concurrently": "^7.6.0",
+    "copy-webpack-plugin": "^10.1.0",
+    "css-loader": "^6.5.1",
+    "dotenv": "^16.0.3",
+    "html-webpack-plugin": "^5.5.0",
+    "nodemon": "^2.0.20",
+    "postcss": "^8.4.4",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.0.1",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.0.1",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.3",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.3.3",
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.9.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.9.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1"
   }
 }
