--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
   },
   "homepage": "https://github.com/Recipe-Find/-Recipe-Rescue#readme",
   "devDependencies": {
-    "eslint": "^8.34.0",
-    "prettier": "^2.8.4",
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
@@ -33,11 +31,13 @@
     "copy-webpack-plugin": "^10.1.0",
     "css-loader": "^6.5.1",
     "dotenv": "^16.0.3",
+    "eslint": "^8.34.0",
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.20",
     "postcss": "^8.4.4",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.0.1",
+    "prettier": "^2.8.4",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.1",
     "ts-loader": "^9.2.6",
@@ -53,11 +53,13 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.3.3",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.9.1",
     "passport": "^0.6.0",
