--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "css-loader": "^6.5.1",
     "dotenv": "^16.0.3",
     "eslint": "^8.34.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.20",
     "postcss": "^8.4.4",
